--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="randomClick">Random</button>
     <h2>CSS Background color!</h2>
     <h3></h3>
-    <script src="Bscript.js"></script>
+    <script src="BScript.js"></script>
 
 </body>
 </html>
